[package]
name = "kvs"
version = "0.1.0"
authors = ["daduam"]
description = "command-line key-value store"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["cargo", "derive"] }
failure = "0.1.8"

[dev-dependencies]
assert_cmd = "2.0.15"
predicates = "3.1.2"
tempfile = "3.13.0"
walkdir = "2.5.0"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
